[project]
name = "smart-cache-paralog-api"
version = "1.2.2"
authors = [{name = "Telicent Ltd", email = "opensource@telicent.io"}]
requires-python = "==3.12"
dependencies = [
    "anyio==4.3.0", 
    "certifi==2024.2.2", 
    "charset-normalizer==3.3.2",
    "click==8.1.7", 
    "fastapi==0.110.0", 
    "h11==0.14.0", 
    "idna==3.7", 
    "isodate==0.6.1",
    "telicent-lib==2.0.3",
    "MarkupSafe==2.1.5",
    "pyparsing==3.1.2",
    "sniffio==1.3.1",
    "SPARQLWrapper==2.0.0",
    "urllib3==2.2.1",
    "uvicorn==0.29.0",
    "types-requests==2.31.0.20240311",
    "pyJWT[crypto]==2.8.0",
]
classifiers = [
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Software Development',
    'Typing :: Typed',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]

[project.urls]
repository = "https://github.com/telicent-oss/smart-cache-paralog-api"

[project.optional-dependencies]
dev = [
    "pre-commit==3.6.2", 
    "ruff==0.3.3", 
    "mypy==1.9.0",
    "cyclonedx-bom==4.4.3",
    ]

[tool.ruff]
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 120

[tool.mypy]
no_implicit_optional = false
ignore_missing_imports = true
files = ["*.py"]

[tool.setuptools]
py-modules = []